2.1.0/_sources/gallery/widgets/cursor.rst.txt


.. _sphx_glr_gallery_widgets_cursor.py:


======
Cursor
======





.. image:: /gallery/widgets/images/sphx_glr_cursor_001.png
    :align: center





.. code-block:: python

    from matplotlib.widgets import Cursor
    import numpy as np
    import matplotlib.pyplot as plt


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    fig = plt.figure(figsize=(8, 6))
    ax = fig.add_subplot(111, facecolor='#FFFFCC')

    x, y = 4*(np.random.rand(2, 100) - .5)
    ax.plot(x, y, 'o')
    ax.set_xlim(-2, 2)
    ax.set_ylim(-2, 2)

    # set useblit = True on gtkagg for enhanced performance
    cursor = Cursor(ax, useblit=True, color='red', linewidth=2)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.019 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: cursor.py <cursor.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: cursor.ipynb <cursor.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
